Bug 1945321 - Constrain inline images to the message display size and not the 100% size from CSS. r=aleca
100% can behave extremely erradic, especially inside tables. And guess what emails often have for
their layout? Tables... So this explicit calculation of the available space in the body is more
reliable for what we want to achieve here. Of course this will still allow images to be too big in
complex layouts, but it's probably safe to assume that the layout overall will be wider then, and
shrinking the image is unlikely to avoid the horizontal overflow anyway. These rules are primarily
intended to work well for "rich plaintext" messages without impairing full on newsletters too much.

Differential Revision: https://phabricator.services.mozilla.com/D285752

--HG--
extra : amend_source : fd08df84465da7e3165314e5eb1e486a5651f78b

--- a/mail/themes/shared/mail/messageBody.css
+++ b/mail/themes/shared/mail/messageBody.css
@@ -124,7 +124,9 @@ mailattachcount {
 
 img {
   &[shrinktofit] {
-    max-inline-size: 100% !important;
+    /* width of the document, minus the margin of the body (8px in the UA
+    stylesheet), minus the scrollbar */
+    max-inline-size: calc(100svi - 16px - env(scrollbar-inline-size)) !important;
 
     &[overflowing] {
       cursor: zoom-in;
